fixed a NPE if you bounce a message.

changed the error display so that we now have a button to show the
stack trace.

made the text in the SendFailedDialog non-editable.

modified trusted SSL certs code so that we remember to trust the certificate
even if there is no local cert file backing it up.

modified the smtp tls code to comply with javamail 1.3.2.

upgraded to JavaMail 1.3.2.

added some support for jdk 1.4 logging framework, including a way to
configure more granulated log settings.

fixed OutOfMemoryError when trying to subscribe to folders in jdk 1.5.

fixed focus with jdk1.5 and closing internal frames bug.

040914 release
--------------

added limited support for drag and drop.

added a way to specify caching scheme per folder, so we can avoid autocaching
of messages in spam and/or sent folders.

added a splashscreen on startup.

optimized the loading of new messages a bit so that we only do one fetch.

messages without CC or BCC entries no longer send a blank cc or bcc line
in the headers.

fixed autocaching support.  made it so we also show a status while downloading
lots of new messages.

fixed expunging on backend filteres.

changed the Cached search so that you can now make a custom display filter
for cached and uncached messages.

fixed a NPE in deleting multiple messages from a search window.

changed the theme selection menu so that we should see all of (and only) the
available look and feels.

040615 release
--------------
disconnection events now test the entire store to see if the connection
has gone down.

left and right arrows on read message pane now just scrolls left and right.

fixed FilterEditor so that the correct filter is shown. 

messages are now only saved to the sent folder after the send succeeds.

fixed DeleteFilter so it doesn't throw an error on configuration.

fixed forward with attachments so that it no longer tries to treat the 
first attachment as the content of the message.
