@@ -629,7 +629,7 @@ Store.editableFields.editor.logging.label=Logging
 Store.editableFields.protocol.label=Store type
 Store.editableFields.trashFolder.label=Trash Folder
 Store.editableFields.defaultProfile.label=Default Profile
-Store.editableFields.mailCheckTime.label=Minutes Between Checks
+Store.editableFields.updateTimeMilliseconds.label=Milliseconds Between Checks
 Store.editableFields.server.label=Server
 Store.editableFields.user.label=User
 Store.editableFields.password.label=Password
