@@ -1,3 +1,11 @@
+fixed a bug in the LIstEditor where values that hadn't changed were reported
+as having changed.
+
+modified the connection checks on folder closes so it should be more efficient.
+
+fixed the mail check time so you can actually set the update time through
+the ui.
+
 fixed a NPE if you bounce a message.
 
 changed the error display so that we now have a button to show the
